test/types/tuple/these/zip_forall_assoc_error.good
zip_forall_assoc_error.chpl:11: error: Tuple zipped with incompatible iterator expression.
